[package]
name = "nacors-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
hex = "0.4.3"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = "0.11.12"
tokio = "1.21.2"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
